--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -60,8 +60,16 @@
   .about-company__explanation {
     width: 100%;
   }
+  
+  .about-company__text {
+   margin-bottom: 25px;
+  }
+  
+  .about-company__text:last-child {
+   margin-bottom: 5px;
+  }
 
   .about-company {
-    margin-bottom: 40px;
+    margin-bottom: 63px;
   }
 }
