--- a/source/sass/blocks/footer-logo.scss
+++ b/source/sass/blocks/footer-logo.scss
@@ -32,8 +32,13 @@
 
 @media (max-width: $mobile-width) {
   .footer-logo {
-    width: 280px;
+    width: 212px;
     margin: 0 auto;
     margin-bottom: 0;
+  }
+  
+  .footer-logo__icon {
+    width: 52px;
+    height: 52px;
   }
 }
