--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -67,10 +67,7 @@
     &::after:active {
       opacity: 0.1;
     }
-    
-    
-    
-  
+
   /*&:hover {
     opacity: 0.3;
   }
@@ -132,7 +129,28 @@
 @media (max-width: $mobile-width) {
   .services {
     background-color: $header-bg-color;
-    padding-top: 80px;
-    padding-bottom: 100px;
+    padding-top: 42px;
   }
+  
+  .services__info {
+  position: relative;
+  color: $white-color;
+  font-size: 20px;
+  line-height: 30px;
+  z-index: 10;
+  width: 60%;
+}
+
+.services__item {
+    width: 93%;
+    min-height: 240px;
+    margin-right: 30px;
+    padding-top: 15px;
+    padding-left: 13%;
+    margin-bottom: 30px;
+  }
+.services__title {
+  line-height: 43px;
+  margin-bottom: 40px;
+}
 }
