--- a/source/sass/blocks/stay.scss
+++ b/source/sass/blocks/stay.scss
@@ -1,14 +1,30 @@
 .stay {
+  position: relative;
   padding-bottom: 110px;
   background-color: $blue-color;
 }
 
+@media (min-width: $desktop-width) {
+  .stay {
+    background-image: url("../../img/background-form.svg");
+    background-repeat: no-repeat;
+  
+    &::before {
+      content: "";
+      top: 150px;
+      left: 15%;
+      width: 511px;
+      height: 288px;
+      position: absolute;
+      background-image: url("../../img/paper_airplane.png");
+      background-size: 511px 288px;
+      background-repeat: no-repeat;
+    }
+  }
+}
+
 .stay__container {
   @include page-size;
-  background-image: url("../../img/paper_airplane.png");
-  background-position: 80px 80px;
-  background-repeat: no-repeat;
-  background-size: 40% 60%;
 }
 
 .stay__wrapper {
@@ -36,32 +52,33 @@
 
 @media (max-width: $tablet-width) {
   .stay__container {
-    background-image: none;margin: auto;
+    background-image: none;
+    margin: auto;
+    &:before {
+      display: none;
+    }
   }
 
   .stay__forms {
-    width: 83%;
+    width: 100%;
     
     margin-left: 0;
   }
   .stay__wrapper {
-    margin-top: 78px;
-    margin-left: 9%;
+    margin-top: 25px;
   }
 
   .stay__header {
-    @include main-header;
-    font-weight: normal;
-    color: $white-color;
-    margin-bottom: 15px;
+    line-height: 43px;
   }
+
   
   .stay__text {
-    margin-bottom: 52px;
+    margin-bottom: 25px;
   }
   
   .stay {
-    padding-bottom: 101px;
+    padding-bottom: 40px;
     background-color: $blue-color;
   }
 }
