--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -333,6 +333,10 @@
   @media (max-width: $tablet-width) {
     height: 130px;
   }
+  
+  @media (max-width: $mobile-width) {
+    height: 80px;
+  }
   &::placeholder {
     color: $white-color;
     font-size: 16px;
