--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -27,7 +27,7 @@
   margin-bottom: 20px;
 }
 
-.popup__button {
+.popup__close {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -40,4 +40,29 @@
 
 .popup--show {
   display: block;
+}
+
+@keyframes shake {
+    0%,
+    100% {
+        -webkit-transform: translateX(0);
+                transform: translateX(0);
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -webkit-transform: translateX(-10px);
+                transform: translateX(-10px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -webkit-transform: translateX(10px);
+                transform: translateX(10px);
+    }
 }
