--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -72,19 +72,33 @@
   @include checkbox;
   background: url("../../img/checkbox-on.svg") no-repeat;
 }
-/*
-.form__input-checkbox:focus + label::before,
-.form__input-checkbox:hover + label::before {
-  @include checkbox;
-  background: url("../../img/checkbox-off-hover.svg") no-repeat;
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
 
-.form__input-checkbox:checked:focus + label::before,
-.form__input-checkbox:checked:hover + label::before {
-  @include checkbox;
-  background: url("../../img/checkbox-on-hover.svg") no-repeat;
+.form--error {
+  animation: shake 0.6s;
 }
-*/
+
 
 .form__label {
   @include white-link;
