--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -43,26 +43,28 @@
 }
 
 @keyframes shake {
-    0%,
-    100% {
-        -webkit-transform: translateX(0);
-                transform: translateX(0);
-    }
+  0%,
+  100% {
+    transform: translateX(0);
+  }
 
-    10%,
-    30%,
-    50%,
-    70%,
-    90% {
-        -webkit-transform: translateX(-10px);
-                transform: translateX(-10px);
-    }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
 
-    20%,
-    40%,
-    60%,
-    80% {
-        -webkit-transform: translateX(10px);
-                transform: translateX(10px);
-    }
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
+.popup--error {
+    -webkit-animation: shake 0.6s;
+            animation: shake 0.6s;
 }
