--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -80,6 +80,7 @@
   &:focus {
     color: #8a8a8a;
     border: 1px solid #8a8a8a;
+    outline: none;
   }
 }
 
@@ -107,6 +108,7 @@
     background-color: $active-blue-color;
     color: #8a8a8a;
     border: none;
+    outline: none;
   }
 }
 
@@ -128,6 +130,7 @@
   &:focus {
     border: 1px solid $active-blue-color;
     color: $active-blue-color;
+    outline: none;
   }
 }
 
@@ -141,6 +144,7 @@
   &:active,
   &:focus {
     color: #8a8a8a;
+    outline: none;
   }
 }
 
@@ -152,6 +156,7 @@
   &:active,
   &:focus {
     color: #dbdbdb;
+    outline: none;
   }
 }
 
@@ -304,6 +309,7 @@
   &::placeholder:active,
   &::placeholder:focus {
     color: $black-color;
+    outline: none;
   }
 
   @media (max-width: $tablet-width) {
@@ -328,6 +334,7 @@
   &:focus {
     background-color: rgba(255, 255, 255, 0.9);
     color: $black-color;
+    outline: none;
   }
   
   @media (max-width: $tablet-width) {
