Делаю затемнение страницы после открытия попапа

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -26,6 +26,10 @@
   align-items: center;
 }
 
+.header__under-popup {
+  opacity: 0.8;
+}
+
 @media (max-width: $tablet-width) {
   .header {
     width: 100%;
