--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -101,6 +101,8 @@
   line-height: 30px;
   z-index: 10;
   width: 50%;
+  font-family: $robotocondensedbold;
+  font-weight: normal;
 }
 
 @media (max-width: $tablet-width) {
