--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -1,30 +1,32 @@
 .popup {
   display: none;
   position: absolute;
-  top: 20px;
+  top: 135px;
   background-color: $blue-color;
   z-index: 100;
-  width: 50%;
-  margin-left: 25%;
+  width: 26%;
+  margin-left: 37%;
 }
 
 .popup__wrapper {
-  @include page-size;
-  margin-top: 20px;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 30px;
 }
 
 .popup__header {
   color: $white-color;
-  font-family: $roboto-mono-regular-font;
+  font-family: $robotocondensedbold;
   font-size: 28px;
+  line-height: 39px;
   font-weight: normal;
-  margin-bottom: 20px;
+  margin-bottom: 13px;
 }
 
 .popup__text {
   @include main-text;
   color: $white-color;
-  margin-bottom: 20px;
+  margin-bottom: 32px;
 }
 
 .popup__close {
