--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -322,6 +322,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
   padding: 15px 5%;
+  height: 80px;
   border: none;
   resize: none;
 
