Исправляю цвет шрифта в футере

--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -202,7 +202,7 @@
 }
 
 @mixin footer-title {
-  font-family: $roboto-mono-regular-font;
+  font-family: $robotocondensedbold;
   font-size: 0.9375rem;
   text-transform: uppercase;
   color: $header-bg-color;
