--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -7,16 +7,12 @@
   }
 }
 
-.main__under-popup {
-  opacity: 0.8;
-}
-
 @media (max-width: $tablet-width) {
   .main {
     background-image: url("../../img/background-tablet.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
-    padding-top: 70px;
+    padding-top: 0;
     z-index: 20;
   }
 }
@@ -29,4 +25,8 @@
     padding-top: 0;
     z-index: 20;
   }
+}
+
+.main__under-popup {
+  opacity: 0.8;
 }
