--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -96,7 +96,7 @@
   }
 
   .promo {
-    padding-top: 40px;
+    padding-top: 0;
    // padding-bottom: 160px;
     margin-bottom: 55px;
     background-image: url("../../img/background-promo-tablet.svg");
