--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -60,14 +60,20 @@
     background-image: url("../../img/producing.png");
     background-size: cover;
   }
+    &::after:hover {
+      opacity: 0.3;
+    }
 
-  &:hover {
-    opacity: 0.9;
+    &::after:active {
+      opacity: 0.1;
+    }
+
+  /*&:hover {
+    opacity: 0.3;
   }
-  
   &:active {
-    opacity: 0.8;
-  }
+    opacity: 0.1;
+  }*/
 }
 
 .services__button {
@@ -104,7 +110,7 @@
   }
   
   .services {
-    padding-top: 45px;
+    padding-top: 52px;
     padding-bottom: 35px;
   }
 
@@ -124,7 +130,6 @@
 @media (max-width: $mobile-width) {
   .services {
     background-color: $header-bg-color;
-    padding-top: 42px;
   }
   
   .services__info {
@@ -143,8 +148,7 @@
     padding-top: 15px;
     padding-left: 13%;
     margin-bottom: 30px;
-  
-}
+  }
 .services__title {
   line-height: 43px;
   margin-bottom: 40px;
