--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -23,7 +23,7 @@
   @include page-size;
   position: relative;
   height: 100%;
-  padding-bottom: 200px;
+  padding-bottom: 274px;
 }
 
 .promo__title {
@@ -96,7 +96,7 @@
   }
 
   .promo {
-    padding-top: 0;
+    padding-top: 40px;
    // padding-bottom: 160px;
     margin-bottom: 55px;
     background-image: url("../../img/background-promo-tablet.svg");
@@ -119,6 +119,7 @@
   .promo__title {
     font-size: 3.75rem;
     margin-left: 45px;
+    padding-top: 70px;
     width: 50%;
     line-height: 70px;
     margin-bottom: 30px;
@@ -144,6 +145,7 @@
   
   .promo__wrapper {
     margin-bottom: 0;
+    padding-bottom: 160px;
   }
 }
 
