--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -33,7 +33,7 @@
 }
 
 @font-face {
-  font-family: "Robotocondensedregular";
+  font-family: "Robotocondensedbold";
   src: url("../fonts/Robotocondensedbold.woff2") format("woff"),
     url("../fonts/Robotocondensedbold.woff2") format("woff2");
   font-weight: normal;
