--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -202,7 +202,7 @@
 }
 
 @mixin footer-title {
-  font-family: $robotocondensedbold;
+  font-family: $roboto-mono-regular-font;
   font-size: 0.9375rem;
   text-transform: uppercase;
   color: $header-bg-color;
@@ -322,7 +322,6 @@
   background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
   padding: 15px 5%;
-  height: 80px;
   border: none;
   resize: none;
 
