--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -60,20 +60,13 @@
     background-image: url("../../img/producing.png");
     background-size: cover;
   }
-    &::after:hover {
-      opacity: 0.3;
-    }
 
-    &::after:active {
-      opacity: 0.1;
-    }
-
-  /*&:hover {
-    opacity: 0.3;
+  &:hover {
+    opacity: 0.9;
   }
   &:active {
-    opacity: 0.1;
-  }*/
+    opacity: 0.8;
+  }
 }
 
 .services__button {
