--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -34,8 +34,8 @@
 
 @font-face {
   font-family: "Robotocondensedbold";
-  src: url("../fonts/Robotocondensedbold.woff2") format("woff"),
-    url("../fonts/Robotocondensedbold.woff2") format("woff2");
+  src: url("../fonts/RobotoCondensed-regular.woff") format("woff"),
+    url("../fonts/RobotoCondensed-regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
