--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -11,18 +11,9 @@
   padding-top: 35px;
 }
 
-.header__logo {
-  width: 200px;
-}
-
 .header__menu {
   @include flex-row;
-  min-width: 70%;
-  align-items: center;
-}
-
-.header__contacts {
-  min-width: 67%;
+  min-width: 77%;
   align-items: center;
 }
 
@@ -33,6 +24,7 @@
 @media (max-width: $tablet-width) {
   .header {
     width: 100%;
+    margin-bottom: 55px;
   }
 
   .header__wrapper {
@@ -43,21 +35,17 @@
   .header__menu {
     min-width: 160px;
   }
-
-  .header__contacts {
-    min-width: 82px;
-  }
 }
 
 @media (max-width: $mobile-width) {
   .header {
     width: 100%;
-    margin-bottom: 35px;
+    margin-bottom: 0;
   }
 
   .header__wrapper {
-    padding-top: 15px;
     margin-bottom: 35px;
+    padding-top: 15px;
   }
 
   .header__logo {
