--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -16,7 +16,7 @@
     background-image: url("../../img/background-tablet.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
-    padding-top: 3px;
+    padding-top: 0;
     z-index: 20;
   }
 }
