--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,6 +2,8 @@
   @include cancel;
   @include flex-row;
   flex-wrap: wrap;
+  min-width: 61%;
+  align-items: center;
 }
 
 .contacts__item {
@@ -13,14 +15,14 @@
   }
 }
 
-.contacts__item--phone svg {
-  width: 17px;
-  height: 17px;
-}
-
 .contacts__item--mail svg {
   width: 19px;
   height: 14px;
+}
+
+.contacts__item--phone svg {
+  width: 17px;
+  height: 17px;
 }
 
 .contacts__item:first-child {
@@ -47,17 +49,16 @@
 }
 
 @media (max-width: $tablet-width) {
-  .contacts__text {
-    display: none;
+  .contacts {
+    min-width: 82px;
   }
 
   .contacts__item {
     margin-right: 0;
   }
 
-  .contacts__item--phone svg {
-    width: 24px;
-    height: 24px;
+  .contacts__item:first-child {
+    margin-right: 0;
   }
 
   .contacts__item--mail svg {
@@ -65,11 +66,16 @@
     height: 18px;
   }
 
-  .contacts__item:first-child {
-    margin-right: 0;
+  .contacts__item--phone svg {
+    width: 24px;
+    height: 24px;
   }
 
   .contacts__item--order-call {
     @include visually-hiddens;
+  }
+
+  .contacts__text {
+    display: none;
   }
 }
