--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,6 +1,6 @@
 .promo {
   position: relative;
- // margin: 0 auto;
+  padding-bottom: 274px;
   color: $white-color;
   background-image: url("../../img/background-promo-desktop.svg");
   background-repeat: no-repeat;
@@ -16,19 +16,18 @@
   height: 515px;
   background-image: url("../../img/motherboard.png");
   background-repeat: no-repeat;
-   background-position: left calc(50% + 366px) top 0;
-} 
+  background-position: left calc(50% + 366px) top 0;
+}
 
 .promo__wrapper {
   @include page-size;
   position: relative;
   height: 100%;
-  padding-bottom: 274px;
+  padding-top: 55px;
 }
 
 .promo__title {
   margin-bottom: 30px;
-  padding-top: 55px;
   width: 100%;
   font-family: $robotocondensedbold;
   text-transform: uppercase;
@@ -43,20 +42,7 @@
   font-family: $pt-mono-regular-font;
   font-size: 22px;
   line-height: 34px;
-}
-
-.promo__button-scroll {
-  position: absolute;
-  left: 0;
-  top: 400px;
-  transform: rotate(-90deg);
-  margin-top: 40px;
-  color: $white-color;
-  opacity: 0.5;
-  cursor: pointer;
-  line-height: 16px;
-  font-family: $pt-mono-regular-font;
-  text-decoration: none;
+  margin-bottom: 40px;
 }
 
 .promo__icon {
@@ -72,13 +58,12 @@
 
 .promo__button {
   @include blue-button;
-  margin-top: 40px;
+  display: inline-block;
   margin-left: 86px;
   padding: 21px 48px;
   font-size: 16px;
   line-height: 19px;
   font-family: $robotocondensedbold;
-  display: inline-block;
   text-align: center;
 }
 
@@ -86,40 +71,44 @@
   display: none;
 }
 
+.promo__button-scroll {
+  position: absolute;
+  left: -50px;
+  top: 480px;
+  transform: rotate(-90deg);
+  color: $white-color;
+  opacity: 0.5;
+  cursor: pointer;
+  line-height: 16px;
+  font-family: $pt-mono-regular-font;
+  text-decoration: none;
+}
+
 @media (max-width: $tablet-width) {
-  .promo__icon svg {
-    width: 33px;
-  }
-
-  .promo__button-scroll {
-    display: none;
-  }
-
   .promo {
     padding-top: 40px;
-   // padding-bottom: 160px;
-    margin-bottom: 55px;
+    padding-bottom: 160px;
     background-image: url("../../img/background-promo-tablet.svg");
     background-position: 60% -80px;
   }
-  
+
   .promo::before {
-    content: "";
-    position: absolute;
     top: 30px;
-    left: 4%;
+    left: -2%;
     width: 781px;
     height: 700px;
     background-image: url("../../img/motherboard-tablet.png");
-   // background-size: cover;
-    background-repeat: no-repeat;
-     background-position: left calc(50% + 260px) top 0;
-  } 
+    background-position: left calc(50% + 280px) top 0;
+  }
+
+  .promo__wrapper {
+    padding-top: 70px;
+    padding-left: 85px;
+    width: 88%;
+  }
 
   .promo__title {
     font-size: 3.75rem;
-    margin-left: 45px;
-    padding-top: 70px;
     width: 50%;
     line-height: 70px;
     margin-bottom: 30px;
@@ -127,85 +116,66 @@
 
   .promo__description {
     font-size: 18px;
-    margin-left: 45px;
-    margin-bottom: 18px;
+    margin-bottom: 58px;
     line-height: 28px;
-    width: 70%;
+    width: 63%;
+  }
+
+  .promo__icon svg {
+    width: 33px;
   }
 
   .promo__button {
     @include blue-button;
-    margin-top: 40px;
-    margin-left: 95px;
-    padding: 18px 33px;
-    font-size: 16px;
-    line-height: 19px;
-    font-family: $robotocondensedbold;
+    margin-left: 47px;
+    padding: 18px 23px;
   }
-  
-  .promo__wrapper {
-    margin-bottom: 0;
-    padding-bottom: 160px;
+
+  .promo__button-scroll {
+    display: none;
   }
 }
 
 @media (max-width: $mobile-width) {
   .promo {
-    //  @include page-size;
-    padding-bottom: 17px;
-   // background-size: 300px 220px;
-   // background-position: left top;
+    padding-bottom: 73px;
     background-image: url("../../img/background-promo-mobile.svg");
-    //   margin: 0 auto;
-    left: 0;
-    width: 100%;
-    margin-left: 0;
-    margin-bottom: 0;
+    margin-bottom: 37px;
   }
-  
+
   .promo::before {
-    content: "";
-    position: absolute;
     top: 0;
-  //  right: 0px;
     width: 100%;
     height: 515px;
-    left: 0;
+    left: 10px;
     background-image: url("../../img/motherboard-mobile.png");
-   // background-size: cover;
-    background-repeat: no-repeat;
-     background-position: left 7% top 0;
-  } 
+    background-position: left 7% top 0;
+  }
 
-  
   .promo__wrapper {
-    padding-bottom: 50px;
+    padding-top: 155px;
+    padding-left: 0;
   }
 
   .promo__title {
-    margin-top: 140px;
-    // margin-left: 0;
     font-size: 2.5rem;
     line-height: 47px;
     width: 100%;
     margin-left: 0;
-    padding-top: 20px;
   }
 
   .promo__description {
-    margin-bottom: 6px;
+    margin-bottom: 36px;
     width: 100%;
     font-size: 16px;
     line-height: 26px;
-    margin-left: 0;
   }
 
   .promo__button {
-    width: 95%;
+    width: 88%;
     margin-left: 0;
     margin-bottom: 0;
     padding: 17px;
-    margin-top: 30px;
   }
 
   .promo__button--desktop {
