--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -42,21 +42,12 @@
 
   &--mounting::after {
     @include picture-after;
-    background-image: url("../../img/mounting.png");
     background-size: cover;
+    background-image: url("../../img/mounting.png");
   }
 
   &--production::after {
-    content: "";
-    background-size: 100%;
-    background-repeat: no-repeat;
-    opacity: 0.5;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: 5;
+    @include picture-after;
     background-image: url("../../img/producing.png");
     background-size: cover;
   }
@@ -64,6 +55,7 @@
   &:hover {
     opacity: 0.9;
   }
+
   &:active {
     opacity: 0.8;
   }
@@ -98,25 +90,31 @@
 }
 
 @media (max-width: $tablet-width) {
-  .services__list {
-    @include flex-column;
-  }
-  
   .services {
     padding-top: 45px;
     padding-bottom: 35px;
+  }
+
+  .services__list {
+    @include flex-column;
   }
 
   .services__item {
     width: 93%;
     min-height: 218px;
     margin-right: 30px;
-    padding-top: 35px;
+    padding-top: 38px;
     padding-left: 6%;
-    margin-bottom: 47px;
+    margin-bottom: 44px;
   }
+
   .services__info {
-    width: 29%;
+    width: 28%;
+  }
+
+  .services__title {
+    width: 98%;
+    margin-bottom: 48px
   }
 }
 
@@ -125,17 +123,8 @@
     background-color: $header-bg-color;
     padding-top: 42px;
   }
-  
-  .services__info {
-  position: relative;
-  color: $white-color;
-  font-size: 20px;
-  line-height: 30px;
-  z-index: 10;
-  width: 60%;
-}
 
-.services__item {
+  .services__item {
     width: 93%;
     min-height: 240px;
     margin-right: 30px;
@@ -143,14 +132,18 @@
     padding-left: 13%;
     margin-bottom: 30px;
   }
-.services__title {
-  line-height: 43px;
-  margin-bottom: 40px;
-}
 
+  .services__info {
+    position: relative;
+    color: $white-color;
+    font-size: 20px;
+    line-height: 30px;
+    z-index: 10;
+    width: 60%;
+  }
 
-.services__wrapper {
-  width: 87;
+  .services__title {
+    line-height: 43px;
+    margin-bottom: 40px;
+  }
 }
-}
-
