--- a/source/sass/blocks/stay.scss
+++ b/source/sass/blocks/stay.scss
@@ -12,7 +12,7 @@
     &::before {
       content: "";
       top: 150px;
-      left: 18%;
+      right: 55%;
       width: 511px;
       height: 288px;
       position: absolute;
