Иправляю пиксель перфект

--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -57,6 +57,11 @@
   .about-company {
     margin-bottom: 63px;
   }
+  
+  .about-company__header {
+    @include main-header;
+    margin-bottom: 16px;
+  }
 
   .about-company__icon {
     display: none;
