--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -40,7 +40,7 @@
 @media (max-width: $mobile-width) {
   .header {
     width: 100%;
-    margin-bottom: 0;
+    margin-bottom: 40px;
   }
 
   .header__wrapper {
